# OptiRoster

./: .gitignore  README.md  launch-gui.bat  launch-gui.command  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml  macos-uv-smoke.yml  windows-uv-smoke.yml
docs/: user-guide.md
docs/api/: domain-types.md
docs/architecture/: constraint-system.md  data-flow.md
docs/ja/: README.md  user-guide.md
example_config/: example_hospitals.toml  example_workers.toml
example_data/: example_max-assignments.csv  example_preferences.csv  example_specified-dates.toml
src/: __init__.py
src/calendar/: utils.py
src/cli/: main.py
src/constraints/: autoimport.py  base.py  base_impl.py  (+14 more)
tests/: conftest.py  test_c01_one_person_per_hospital.py  test_c02_no_overlap_same_time.py  test_c03_respect_preferences.py  test_c04_max_assignments.py  test_c05_night_spacing.py  test_c06_forbid_remote_after_night.py  test_c07_univ_last_holiday_night_specialist_only.py  test_constraints_plugin.py  test_export_excel.py  test_gui_cell_clear_simple.py  test_gui_colors.py  test_holiday_utils.py  test_hospitals_loader.py  test_max_assignments_loader_strict.py  test_penalty_report_summary.py  test_preferences_loader.py  test_preferences_loader_wants_night_rule.py  test_s01_night_spacing_pairs.py  test_s02_soft_no_night_remote_daypm_same_day.py  test_s03_night_deviation_band.py  test_s04_soft_balance_non_night_by_weekday.py  test_s05_soft_no_duty_after_night.py  test_slack_reporting.py  test_specified_date_loader.py  test_validation.py  test_variable_builder.py  test_workers_loader.py
(+19 files in other folders)
